--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -67,36 +67,41 @@
                     app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.circleImageView"
                     app:srcCompat="@drawable/gradient_bg" />
 
-                <androidx.appcompat.widget.AppCompatButton
+                <com.google.android.material.button.MaterialButton
                     android:id="@+id/playBtn"
-                    style="@android:style/Widget.Button"
                     android:layout_width="150dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="14dp"
                     android:layout_marginBottom="14dp"
-                    android:background="@drawable/white_btn"
-                    android:drawableStart="@drawable/play"
-                    android:paddingHorizontal="30dp"
+                    android:paddingVertical="14dp"
+                    app:backgroundTint="@android:color/white"
+                    app:icon="@drawable/play"
+                    app:iconGravity="textStart"
+                    app:iconTint="@android:color/black"
+                    app:cornerRadius="10dp"
                     android:text="Phát"
+                    android:textColor="@android:color/black"
                     android:textSize="16dp"
                     android:textStyle="bold"
                     app:layout_constraintBottom_toBottomOf="@+id/imageView5"
                     app:layout_constraintStart_toStartOf="@+id/imageView5" />
 
-                <androidx.appcompat.widget.AppCompatButton
+                <com.google.android.material.button.MaterialButton
                     android:id="@+id/myListBtn"
-                    style="@android:style/Widget.Button"
                     android:layout_width="150dp"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="14dp"
                     android:layout_marginBottom="14dp"
-                    android:background="@drawable/gray_btn"
-                    android:drawableStart="@drawable/add"
-                    android:paddingHorizontal="30dp"
-                    android:text=" Thêm"
+                    android:paddingVertical="14dp"
+                    android:backgroundTint="#3D3737"
+                    app:iconTint="@android:color/white"
+                    app:icon="@drawable/add"
+                    app:iconGravity="textStart"
+                    android:text="Thêm"
                     android:textColor="@android:color/white"
                     android:textSize="16dp"
                     android:textStyle="bold"
+                    app:cornerRadius="10dp"
                     app:layout_constraintBottom_toBottomOf="@+id/bigPoster"
                     app:layout_constraintEnd_toEndOf="@+id/imageView5" />
 
@@ -210,6 +215,159 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
             </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <HorizontalScrollView
+                android:scrollbars="none"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="150dp"
+                    android:background="@drawable/network_gradient"
+                    android:layout_marginBottom="20dp">
+
+                    <ImageView
+                        android:layout_marginLeft="5dp"
+                        android:id="@+id/imageView"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/networks_text"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <TextView
+                        android:id="@+id/textView9"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginTop="30dp"
+                        android:text="Popular"
+                        android:textColor="#D0001C"
+                        android:textStyle="bold"
+                        android:textSize="12dp"
+                        app:layout_constraintStart_toEndOf="@+id/imageView"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <TextView
+                        android:id="@+id/textView11"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="5dp"
+                        android:text="NETWORKS"
+                        android:textColor="@android:color/white"
+                        android:textSize="16dp"
+                        android:textStyle="bold"
+                        app:layout_constraintStart_toStartOf="@+id/textView9"
+                        app:layout_constraintTop_toBottomOf="@+id/textView9" />
+
+                    <LinearLayout
+                        android:orientation="horizontal"
+                        android:layout_marginLeft="20dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        app:layout_constraintStart_toEndOf="@+id/textView11" >
+                        <LinearLayout
+                            android:layout_marginRight="20dp"
+                            android:layout_gravity="center_vertical"
+                            android:orientation="vertical"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content">
+                            <com.google.android.material.imageview.ShapeableImageView
+                                app:shapeAppearanceOverlay="@style/rounded_corner"
+                                android:background="@android:color/white"
+                                android:src="@drawable/netflix_logo"
+                                android:layout_width="70dp"
+                                android:layout_height="70dp"/>
+                            <TextView
+                                android:layout_marginTop="5dp"
+                                android:textColor="@android:color/white"
+                                android:layout_gravity="center"
+                                android:text="Netflix"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"/>
+                        </LinearLayout>
+                        <LinearLayout
+                            android:layout_marginRight="20dp"
+                            android:layout_gravity="center_vertical"
+                            android:orientation="vertical"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content">
+                            <com.google.android.material.imageview.ShapeableImageView
+                                android:src="@drawable/apple_tv_logo"
+                                app:shapeAppearanceOverlay="@style/rounded_corner"
+                                android:background="@android:color/white"
+                                android:layout_width="70dp"
+                                android:layout_height="70dp"/>
+                            <TextView
+                                android:layout_marginTop="5dp"
+                                android:textColor="@android:color/white"
+                                android:layout_gravity="center"
+                                android:text="Apple TV+"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"/>
+                        </LinearLayout>
+                        <LinearLayout
+                            android:layout_marginRight="20dp"
+                            android:layout_gravity="center_vertical"
+                            android:orientation="vertical"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content">
+                            <com.google.android.material.imageview.ShapeableImageView
+                                android:src="@drawable/prime_logo"
+                                app:shapeAppearanceOverlay="@style/rounded_corner"
+                                android:background="@android:color/white"
+                                android:layout_width="70dp"
+                                android:layout_height="70dp"/>
+                            <TextView
+                                android:layout_marginTop="5dp"
+                                android:textColor="@android:color/white"
+                                android:layout_gravity="center"
+                                android:text="Prime"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"/>
+                        </LinearLayout>
+                        <LinearLayout
+                            android:layout_marginRight="20dp"
+                            android:layout_gravity="center_vertical"
+                            android:orientation="vertical"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content">
+                            <com.google.android.material.imageview.ShapeableImageView
+                                app:shapeAppearanceOverlay="@style/rounded_corner"
+                                android:background="@android:color/white"
+                                android:layout_width="70dp"
+                                android:layout_height="70dp"/>
+                            <TextView
+                                android:layout_marginTop="5dp"
+                                android:textColor="@android:color/white"
+                                android:layout_gravity="center"
+                                android:text="Netflix"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"/>
+                        </LinearLayout>
+                        <LinearLayout
+                            android:layout_marginRight="20dp"
+                            android:layout_gravity="center_vertical"
+                            android:orientation="vertical"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content">
+                            <com.google.android.material.imageview.ShapeableImageView
+                                app:shapeAppearanceOverlay="@style/rounded_corner"
+                                android:background="@android:color/white"
+                                android:layout_width="70dp"
+                                android:layout_height="70dp"/>
+                            <TextView
+                                android:layout_marginTop="5dp"
+                                android:textColor="@android:color/white"
+                                android:layout_gravity="center"
+                                android:text="Netflix"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"/>
+                        </LinearLayout>
+                    </LinearLayout>
+                </androidx.constraintlayout.widget.ConstraintLayout>
+            </HorizontalScrollView>
 
             <TextView
                 android:id="@+id/textView5"
