--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -9,7 +9,7 @@
 
     <ImageView
         android:id="@+id/logo_name"
-        android:layout_width="wrap_content"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:src="@drawable/logo_name"
         app:layout_constraintBottom_toBottomOf="parent"
