--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -24,6 +24,10 @@
         <item name="cornerSize">12dp</item>
     </style>
 
+    <style name="grid_item_corner">
+        <item name="cornerSize">5dp</item>
+    </style>
+
     <style name="TransparentStatusBarTheme" parent="Base.Theme.Cineflix" >
         <item name="android:statusBarColor" >@android:color/transparent</item>
         <item name="android:windowTranslucentStatus">true</item>
