--- a/app/src/main/res/layout/slide_item_cw_contaner.xml
+++ b/app/src/main/res/layout/slide_item_cw_contaner.xml
@@ -1,38 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
+    android:layout_width="125dp"
     android:layout_height="wrap_content"
-    android:layout_margin="2dp"
-    android:orientation="vertical"
+    android:layout_marginEnd="10dp"
     >
 
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/imagePoster"
         style="@style/ShapeAppearanceOverlay.App.circleImageView"
-        android:layout_width="match_parent"
-        android:layout_height="170dp"
+        android:layout_width="125dp"
+        android:layout_height="180dp"
         android:scaleType="centerCrop"
         android:background="@color/shimmerColor"
+        app:shapeAppearanceOverlay="@style/grid_item_corner"
         android:src="@drawable/aaaaby8rhdsiftokfnzl3or_t_cixonehoe5v47ck_yov6sq9u6dgcxi6g0vjlelkvrdotghhneztw9qa_q14oimsyyoualu2zqn4ioramujvt3qfeugs5iotornev_a18bszhmztw"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="10dp">
+        app:layout_constraintVertical_bias="0.432">
 
     </com.google.android.material.imageview.ShapeableImageView>
 
     <TextView
-        android:id="@+id/title"
+        android:id="@+id/textviewCWatching"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:text="TextView"
         android:gravity="center"
         android:textColor="@android:color/white"
         android:textSize="12dp"
         android:maxLines="2"
         android:ellipsize="end"
         android:layout_marginTop="10dp"
-        android:text="TextView" />
+        app:layout_constraintEnd_toEndOf="@+id/imagePoster"
+        app:layout_constraintStart_toStartOf="@+id/imagePoster"
+        app:layout_constraintTop_toBottomOf="@+id/imagePoster" />
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
