--- a/app/src/main/res/layout/slide_item_cw_contaner.xml
+++ b/app/src/main/res/layout/slide_item_cw_contaner.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="125dp"
     android:layout_height="wrap_content"
     android:layout_marginEnd="10dp"
@@ -38,5 +39,17 @@
         app:layout_constraintEnd_toEndOf="@+id/imagePoster"
         app:layout_constraintStart_toStartOf="@+id/imagePoster"
         app:layout_constraintTop_toBottomOf="@+id/imagePoster" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/play_circle"
+        android:scaleY="1.5"
+        android:scaleX="1.5"
+        app:layout_constraintBottom_toBottomOf="@+id/imagePoster"
+        app:layout_constraintEnd_toEndOf="@+id/imagePoster"
+        app:layout_constraintStart_toStartOf="@+id/imagePoster"
+        app:layout_constraintTop_toTopOf="@+id/imagePoster" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
