fix: improve continue watching

--- a/app/src/main/res/layout/activity_movie_player.xml
+++ b/app/src/main/res/layout/activity_movie_player.xml
@@ -55,7 +55,7 @@
                 android:max="255"
                 android:progress="150"
                 android:progressBackgroundTint="@android:color/white"
-                android:progressTint="@color/red"
+                android:progressTint="@android:color/white"
                 android:rotation="270"
                 android:scaleY="3"
                 android:thumb="@null"
@@ -94,7 +94,7 @@
                 android:max="255"
                 android:progress="150"
                 android:progressBackgroundTint="@android:color/white"
-                android:progressTint="@color/red"
+                android:progressTint="@android:color/white"
                 android:rotation="270"
                 android:scaleY="3"
                 android:thumb="@null"
