--- a/app/src/main/res/layout/custom_video_player.xml
+++ b/app/src/main/res/layout/custom_video_player.xml
@@ -33,6 +33,7 @@
             android:gravity="center"
             android:maxLines="2"
             android:text="Movie Name"
+            android:textStyle="bold"
             android:textColor="@android:color/white" />
 
         <TextView
