--- a/app/src/main/res/layout/activity_movie_player.xml
+++ b/app/src/main/res/layout/activity_movie_player.xml
@@ -11,6 +11,7 @@
         android:id="@+id/main_player"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
         <com.google.android.exoplayer2.ui.PlayerView
             android:id="@+id/video_view"
             android:background="@android:color/black"
@@ -19,9 +20,9 @@
             app:surface_type="surface_view"
             app:use_controller="true"
             app:controller_layout_id="@layout/custom_video_player"
+
             >
         </com.google.android.exoplayer2.ui.PlayerView>
-
         <LinearLayout
             android:id="@+id/videoView_two_layout"
             android:layout_width="wrap_content"
@@ -140,24 +141,28 @@
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
+
                 <LinearLayout
-                    android:orientation="vertical"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:layout_weight="1">
+                    android:layout_weight="1"
+                    android:orientation="vertical">
+
                     <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
                         android:text="Nguồn Phim"
                         android:textColor="@android:color/white"
-                        android:textStyle="bold"
                         android:textSize="20dp"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"/>
+                        android:textStyle="bold" />
                     <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/sourceRC"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_marginTop="20dp"/>
+                        android:layout_height="250dp"
+                        android:layout_marginTop="20dp" />
+
                 </LinearLayout>
+
                 <LinearLayout
                     android:orientation="vertical"
                     android:layout_width="0dp"
@@ -173,7 +178,7 @@
                     <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/subtitleRC"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
+                        android:layout_height="250dp"
                         android:layout_marginTop="20dp"/>
                 </LinearLayout>
             </LinearLayout>
@@ -207,6 +212,152 @@
 
 
         </LinearLayout>
+
+
+        <LinearLayout
+            android:layout_gravity="center"
+            android:id="@+id/videoView_three_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:orientation="horizontal"
+            android:visibility="visible"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+
+            <Space
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1.3" />
+
+            <TextView
+                android:id="@+id/left"
+                android:textSize="16dp"
+                android:gravity="center"
+                android:layout_gravity="center"
+                android:text="10"
+                android:textColor="@android:color/white"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:visibility="invisible"
+                tools:visibility="visible"/>
+
+
+
+            <Space
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1" />
+            <Space
+                android:layout_width="100dp"
+                android:layout_height="wrap_content" />
+            <Space
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1" />
+
+
+            <TextView
+                android:id="@+id/right"
+                android:textSize="16dp"
+                android:gravity="center"
+                android:layout_gravity="center"
+                android:text="10"
+                android:textColor="@android:color/white"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:visibility="invisible"
+                tools:visibility="visible"/>
+
+            <Space
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1.3" />
+
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:orientation="horizontal"
+            android:visibility="visible"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+
+            <Space
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1.3" />
+
+            <ImageButton
+                android:clickable="false"
+                android:id="@+id/exo_rewAnim"
+                android:layout_width="50dp"
+                android:layout_height="60dp"
+                android:background="@drawable/play_ripple"
+                android:backgroundTint="@android:color/transparent"
+                android:focusable="true"
+                android:src="@drawable/ic_rewind"
+                android:visibility="invisible"
+                tools:visibility="visible" />
+
+            <Space
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1" />
+
+
+            <Space
+                android:layout_width="100dp"
+                android:layout_height="wrap_content" />
+
+            <Space
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1" />
+
+
+            <ImageButton
+                android:clickable="false"
+                android:id="@+id/exo_ffwdAnim"
+                android:layout_width="60dp"
+                android:background="@drawable/play_ripple"
+                android:focusable="true"
+                android:layout_height="60dp"
+                android:backgroundTint="@android:color/transparent"
+                android:src="@drawable/ic_forward"
+                android:visibility="invisible"
+                tools:visibility="visible"/>
+
+            <Space
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1.3" />
+
+
+        </LinearLayout>
+
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:visibility="visible"
+            tools:visibility="gone"
+            android:id="@+id/video_loading_fl"
+            >
+            <ProgressBar
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:visibility="visible"
+                android:id="@+id/video_loading"
+                android:indeterminateTint="@color/red"
+                />
+        </FrameLayout>
     </FrameLayout>
 
 
