--- a/app/src/main/res/layout/custom_video_player.xml
+++ b/app/src/main/res/layout/custom_video_player.xml
@@ -97,13 +97,13 @@
                 android:background="@android:color/transparent"
                 android:focusable="true"/>
 
-            <ProgressBar
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_gravity="center"
-                android:id="@+id/buffering"
-                android:indeterminateTint="@color/red"
-                />
+<!--            <ProgressBar-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="match_parent"-->
+<!--                android:layout_gravity="center"-->
+<!--                android:id="@+id/buffering"-->
+<!--                android:indeterminateTint="@color/red"-->
+<!--                />-->
         </FrameLayout>
 
         <Space
@@ -120,6 +120,65 @@
             android:layout_height="60dp"
             android:backgroundTint="@android:color/transparent"
             android:src="@drawable/ic_forward" />
+
+        <Space
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1.3" />
+
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_gravity="center"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="horizontal"
+        android:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+
+        <Space
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1.3" />
+
+        <TextView
+            android:id="@+id/left_controller"
+            android:textSize="16dp"
+            android:gravity="center"
+            android:layout_gravity="center"
+            android:text="10"
+            android:textColor="@android:color/white"
+            android:layout_width="60dp"
+            android:layout_height="60dp"/>
+
+
+
+        <Space
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1" />
+        <Space
+            android:layout_width="100dp"
+            android:layout_height="wrap_content" />
+        <Space
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1" />
+
+
+        <TextView
+            android:id="@+id/rightController"
+            android:textSize="16dp"
+            android:gravity="center"
+            android:layout_gravity="center"
+            android:text="10"
+            android:textColor="@android:color/white"
+            android:layout_width="60dp"
+            android:layout_height="60dp"/>
 
         <Space
             android:layout_width="wrap_content"
@@ -162,9 +221,8 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:progress="50"
-                app:scrubber_color="@android:color/holo_red_light"
-                app:unplayed_color="@android:color/white"
-                app:played_color="@android:color/holo_red_light"
+                app:scrubber_color="@color/red"
+                app:played_color="@color/red"
                 android:scrollbarThumbVertical="@android:color/holo_red_light"
                 android:scrollbarThumbHorizontal="@android:color/holo_red_light" />
 
