--- a/app/src/main/res/layout/grid_item_container.xml
+++ b/app/src/main/res/layout/grid_item_container.xml
@@ -12,7 +12,9 @@
         android:layout_height="170dp"
         android:background="@color/shimmerColor"
         android:scaleType="centerCrop"
-        android:src="@drawable/aaaaby8rhdsiftokfnzl3or_t_cixonehoe5v47ck_yov6sq9u6dgcxi6g0vjlelkvrdotghhneztw9qa_q14oimsyyoualu2zqn4ioramujvt3qfeugs5iotornev_a18bszhmztw"
+        android:foreground="?selectableItemBackgroundBorderless"
+        android:clickable="true"
+        android:focusable="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
