--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -33,7 +33,7 @@
                     android:scaleType="centerCrop"
                     android:layout_width="match_parent"
                     android:layout_height="300dp"
-                    android:contentDescription="TODO" />
+                     />
                 <com.google.android.material.imageview.ShapeableImageView
                     android:layout_gravity="bottom"
                     android:id="@+id/imageView5"
@@ -176,6 +176,9 @@
                     android:orientation="vertical"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:clickable="true"
+                    android:focusable="true"
+                    android:background="?android:selectableItemBackgroundBorderless"
                     android:layout_marginEnd="40dp">
                     <androidx.appcompat.widget.AppCompatImageButton
                         android:tint="@android:color/white"
@@ -198,6 +201,9 @@
                     android:orientation="vertical"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:clickable="true"
+                    android:focusable="true"
+                    android:background="?android:selectableItemBackgroundBorderless"
                     android:layout_marginEnd="40dp">
                     <androidx.appcompat.widget.AppCompatImageButton
                         android:tint="@android:color/white"
@@ -222,7 +228,10 @@
                 <LinearLayout
                     android:orientation="vertical"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:clickable="true"
+                    android:focusable="true"
+                    android:background="?android:selectableItemBackgroundBorderless">
                     <androidx.appcompat.widget.AppCompatImageButton
                         android:tint="@android:color/white"
                         android:layout_gravity="center_horizontal"
