--- a/app/src/main/res/layout/episode_item_container.xml
+++ b/app/src/main/res/layout/episode_item_container.xml
@@ -5,6 +5,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:foreground="?selectableItemBackgroundBorderless"
+    android:clickable="true"
+    android:focusable="true"
     android:layout_marginBottom="20dp">
     <LinearLayout
         android:orientation="horizontal"
