--- a/app/src/main/res/layout/slide_item_container.xml
+++ b/app/src/main/res/layout/slide_item_container.xml
@@ -14,13 +14,15 @@
         android:scaleType="centerCrop"
         android:background="@color/shimmerColor"
         app:shapeAppearanceOverlay="@style/grid_item_corner"
-        android:src="@drawable/aaaaby8rhdsiftokfnzl3or_t_cixonehoe5v47ck_yov6sq9u6dgcxi6g0vjlelkvrdotghhneztw9qa_q14oimsyyoualu2zqn4ioramujvt3qfeugs5iotornev_a18bszhmztw"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.432">
+        app:layout_constraintVertical_bias="0.432"
+        android:foreground="?selectableItemBackgroundBorderless"
+        android:clickable="true"
+        android:focusable="true">
 
     </com.google.android.material.imageview.ShapeableImageView>
 
