--- a/app/src/main/res/layout/slide_item_cw_contaner.xml
+++ b/app/src/main/res/layout/slide_item_cw_contaner.xml
@@ -12,18 +12,53 @@
         style="@style/ShapeAppearanceOverlay.App.circleImageView"
         android:layout_width="125dp"
         android:layout_height="180dp"
-        android:scaleType="centerCrop"
         android:background="@color/shimmerColor"
-        app:shapeAppearanceOverlay="@style/grid_item_corner"
-        android:src="@drawable/aaaaby8rhdsiftokfnzl3or_t_cixonehoe5v47ck_yov6sq9u6dgcxi6g0vjlelkvrdotghhneztw9qa_q14oimsyyoualu2zqn4ioramujvt3qfeugs5iotornev_a18bszhmztw"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:scaleType="centerCrop"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.432">
+        app:layout_constraintVertical_bias="0.0"
+        android:layout_marginTop="15dp"
+        android:foreground="?selectableItemBackgroundBorderless"
+        android:clickable="true"
+        android:focusable="true"
+        app:shapeAppearanceOverlay="@style/grid_item_corner">
 
     </com.google.android.material.imageview.ShapeableImageView>
+
+    <LinearLayout
+        android:id="@+id/layoutButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:background="#161616"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imagePoster"
+        android:translationY="-4dp">
+        <ImageView
+            android:layout_weight="1"
+            android:src="@drawable/ic_info"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:tint="@android:color/white"
+            android:paddingBottom="5dp"
+            android:paddingTop="5dp"
+            android:foreground="?selectableItemBackgroundBorderless"
+            android:clickable="true"
+            android:focusable="true"/>
+        <ImageView
+            android:layout_weight="1"
+            android:src="@drawable/ic_more_vertical"
+            android:layout_width="0dp"
+            android:paddingTop="5dp"
+            android:layout_height="wrap_content"
+            app:tint="@android:color/white"
+            android:foreground="?selectableItemBackgroundBorderless"
+            android:clickable="true"
+            android:focusable="true"/>
+    </LinearLayout>
 
     <TextView
         android:id="@+id/textviewCWatching"
@@ -33,12 +68,12 @@
         android:gravity="center"
         android:textColor="@android:color/white"
         android:textSize="12dp"
-        android:maxLines="2"
+        android:maxLines="1"
         android:ellipsize="end"
         android:layout_marginTop="10dp"
         app:layout_constraintEnd_toEndOf="@+id/imagePoster"
         app:layout_constraintStart_toStartOf="@+id/imagePoster"
-        app:layout_constraintTop_toBottomOf="@+id/imagePoster" />
+        app:layout_constraintTop_toBottomOf="@+id/layoutButton" />
 
     <ImageView
         android:layout_width="wrap_content"
@@ -50,6 +85,10 @@
         app:layout_constraintEnd_toEndOf="@+id/imagePoster"
         app:layout_constraintStart_toStartOf="@+id/imagePoster"
         app:layout_constraintTop_toTopOf="@+id/imagePoster" />
+
+
+
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
