--- a/app/src/main/res/layout/slide_item_cw_contaner.xml
+++ b/app/src/main/res/layout/slide_item_cw_contaner.xml
@@ -38,6 +38,7 @@
         app:layout_constraintTop_toBottomOf="@+id/imagePoster"
         android:translationY="-4dp">
         <ImageView
+            android:id="@+id/info_btn"
             android:layout_weight="1"
             android:src="@drawable/ic_info"
             android:layout_width="0dp"
@@ -49,6 +50,7 @@
             android:clickable="true"
             android:focusable="true"/>
         <ImageView
+            android:id="@+id/more_btn"
             android:layout_weight="1"
             android:src="@drawable/ic_more_vertical"
             android:layout_width="0dp"
