--- a/app/src/main/res/drawable/trash_ic.xml
+++ b/app/src/main/res/drawable/trash_ic.xml
@@ -6,7 +6,7 @@
     android:viewportHeight="24">
 
     <path
-        android:strokeColor="#000000"
+        android:strokeColor="#ffffff"
         android:strokeWidth="1.5"
         android:strokeLineJoin="round"
         android:strokeLineCap="round"
