--- a/app/src/main/res/layout/slide_item_container_top_number.xml
+++ b/app/src/main/res/layout/slide_item_container_top_number.xml
@@ -12,11 +12,12 @@
         android:layout_height="wrap_content"
         android:gravity="end"
         android:letterSpacing="-0.3"
-        android:text="10"
+        android:text="1"
         android:textColor="#141414"
-        android:textSize="120dp"
+        android:textSize="110dp"
         android:textStyle="bold"
         android:translationY="25dp"
+        android:fontFamily="@font/inter_bold"
         app:layout_constraintBottom_toBottomOf="@+id/imagePoster"
         app:layout_constraintEnd_toStartOf="@+id/imagePoster" />
 
