--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -5,6 +5,7 @@
         <item name="android:statusBarColor">@android:color/transparent</item>
         <item name="android:windowTranslucentStatus">true</item>
          <item name="colorPrimary">@color/red</item>
+        <item name="fontFamily">@font/inter_regular</item>
     </style>
 
     <style name="SplashScreenTheme" parent="Theme.Material3.DayNight.NoActionBar">
