--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -296,7 +296,7 @@
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/backBtn"
-            android:background="?android:attr/selectableItemBackground"
+            android:background="?attr/selectableItemBackgroundBorderless"
             android:layout_width="70dp"
             android:layout_height="wrap_content"
             android:layout_gravity="start"
