--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,15 +2,14 @@
     <!-- Base application theme. -->
     <style name="Base.Theme.Cineflix" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
-        <item name="android:statusBarColor">@android:color/transparent</item>
-        <item name="android:windowTranslucentStatus">true</item>
+        <item name="android:statusBarColor" tools:targetApi="l">@color/shimmerColor</item>
+        <item name="colorPrimaryDark">@color/shimmerColor</item>
          <item name="colorPrimary">@color/red</item>
         <item name="fontFamily">@font/inter_regular</item>
     </style>
 
     <style name="SplashScreenTheme" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
-        <item name="android:statusBarColor">@android:color/transparent</item>
         <item name="android:windowTranslucentStatus">true</item>
         <item name="colorPrimary">@color/red</item>
     </style>
